--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1137,6 +1137,9 @@ select {
 .top-0 {
 	top: 0px;
 }
+.bottom-0 {
+	bottom: 0px;
+}
 .z-0 {
 	z-index: 0;
 }
@@ -1165,6 +1168,18 @@ select {
 .my-20 {
 	margin-top: 5rem;
 	margin-bottom: 5rem;
+}
+.my-5 {
+	margin-top: 1.25rem;
+	margin-bottom: 1.25rem;
+}
+.my-4 {
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+}
+.mx-4 {
+	margin-left: 1rem;
+	margin-right: 1rem;
 }
 .my-2 {
 	margin-top: 0.5rem;
@@ -1256,6 +1271,12 @@ select {
 }
 .mt-0 {
 	margin-top: 0px;
+}
+.mb-3 {
+	margin-bottom: 0.75rem;
+}
+.mb-0 {
+	margin-bottom: 0px;
 }
 .block {
 	display: block;
@@ -1463,6 +1484,9 @@ select {
 .gap-2 {
 	gap: 0.5rem;
 }
+.gap-0 {
+	gap: 0px;
+}
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-x-reverse: 0;
 	margin-right: calc(2rem * var(--tw-space-x-reverse));
@@ -1587,10 +1611,6 @@ select {
 .border-indigo-500 {
 	--tw-border-opacity: 1;
 	border-color: rgba(99, 102, 241, var(--tw-border-opacity));
-}
-.border-gray-600 {
-	--tw-border-opacity: 1;
-	border-color: rgba(75, 85, 99, var(--tw-border-opacity));
 }
 .bg-white {
 	--tw-bg-opacity: 1;
@@ -1767,6 +1787,10 @@ select {
 	padding-left: 2rem;
 	padding-right: 2rem;
 }
+.px-0 {
+	padding-left: 0px;
+	padding-right: 0px;
+}
 .pt-6 {
 	padding-top: 1.5rem;
 }
@@ -1875,6 +1899,9 @@ select {
 }
 .leading-4 {
 	line-height: 1rem;
+}
+.leading-8 {
+	line-height: 2rem;
 }
 .leading-6 {
 	line-height: 1.5rem;
@@ -2122,6 +2149,10 @@ select {
 .hover\:text-white:hover {
 	--tw-text-opacity: 1;
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
+.hover\:text-blue-800:hover {
+	--tw-text-opacity: 1;
+	color: rgba(30, 64, 175, var(--tw-text-opacity));
 }
 .focus\:z-10:focus {
 	z-index: 10;
