--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1149,14 +1149,14 @@ select {
 .col-span-6 {
 	grid-column: span 6 / span 6;
 }
+.col-span-4 {
+	grid-column: span 4 / span 4;
+}
 .col-span-2 {
 	grid-column: span 2 / span 2;
 }
 .col-span-3 {
 	grid-column: span 3 / span 3;
-}
-.col-span-4 {
-	grid-column: span 4 / span 4;
 }
 .float-right {
 	float: right;
@@ -1320,11 +1320,14 @@ select {
 .h-20 {
 	height: 5rem;
 }
-.h-48 {
-	height: 12rem;
-}
 .h-60 {
 	height: 15rem;
+}
+.h-80 {
+	height: 20rem;
+}
+.h-48 {
+	height: 12rem;
 }
 .h-auto {
 	height: auto;
@@ -1660,6 +1663,10 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
+.bg-gray-400 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
+}
 .bg-red-200 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(254, 202, 202, var(--tw-bg-opacity));
@@ -1678,10 +1685,6 @@ select {
 .bg-gray-300 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
-}
-.bg-gray-400 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
 }
 .bg-blue-400 {
 	--tw-bg-opacity: 1;
@@ -1783,13 +1786,13 @@ select {
 	padding-left: 1.25rem;
 	padding-right: 1.25rem;
 }
-.px-8 {
-	padding-left: 2rem;
-	padding-right: 2rem;
-}
 .px-0 {
 	padding-left: 0px;
 	padding-right: 0px;
+}
+.px-8 {
+	padding-left: 2rem;
+	padding-right: 2rem;
 }
 .pt-6 {
 	padding-top: 1.5rem;
@@ -1899,6 +1902,9 @@ select {
 }
 .leading-4 {
 	line-height: 1rem;
+}
+.leading-10 {
+	line-height: 2.5rem;
 }
 .leading-8 {
 	line-height: 2rem;
@@ -2153,6 +2159,9 @@ select {
 .hover\:text-blue-800:hover {
 	--tw-text-opacity: 1;
 	color: rgba(30, 64, 175, var(--tw-text-opacity));
+}
+.hover\:underline:hover {
+	text-decoration: underline;
 }
 .focus\:z-10:focus {
 	z-index: 10;
@@ -2517,12 +2526,12 @@ select {
 		grid-template-columns: repeat(5, minmax(0, 1fr));
 	}
 
-	.lg\:grid-cols-3 {
-		grid-template-columns: repeat(3, minmax(0, 1fr));
-	}
-
 	.lg\:grid-cols-4 {
 		grid-template-columns: repeat(4, minmax(0, 1fr));
+	}
+
+	.lg\:grid-cols-3 {
+		grid-template-columns: repeat(3, minmax(0, 1fr));
 	}
 
 	.lg\:grid-cols-6 {
