--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1289,6 +1289,9 @@ select {
 .mt-0 {
 	margin-top: 0px;
 }
+.mb-3 {
+	margin-bottom: 0.75rem;
+}
 .mt-14 {
 	margin-top: 3.5rem;
 }
@@ -1300,9 +1303,6 @@ select {
 }
 .mb-8 {
 	margin-bottom: 2rem;
-}
-.mb-3 {
-	margin-bottom: 0.75rem;
 }
 .ml-0 {
 	margin-left: 0px;
@@ -1367,11 +1367,14 @@ select {
 .h-auto {
 	height: auto;
 }
-.h-80 {
-	height: 20rem;
+.h-full {
+	height: 100%;
 }
 .h-48 {
 	height: 12rem;
+}
+.h-80 {
+	height: 20rem;
 }
 .min-h-screen {
 	min-height: 100vh;
